--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -24,11 +24,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/11/n11646495.md#1" target="_blank">四川巴中幼儿园被曝给孩子吃霉变食物</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/11/n11646495.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/200FotoJet-2_meitu_1-150x120.jpg" align ="left"></a>近年来，中国大陆中小学、幼儿园给孩子吃过期霉变食物等安全事故不断曝光，但政府处理的结果往往是不了了之。人们质问，中共治下，道德败坏，官商勾结，人们到哪儿去找一家放心的幼儿园呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 4:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/11/n11648644.md#1" target="_blank">卫生部前高官报告：毒疫苗残害成千上万儿童</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/11/n11648644.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/06/1306010415592431-150x120.jpg" align ="left"></a>中国毒疫苗受害者何方美及她的孩子，她的孩子因使用疫苗目前不能走路，何方美因上访维权及帮助其他受害者家属而于今年3月被拘，案件将于近日开庭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 1:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/9/n11644702.md#1" target="_blank">黑龙江医院没床位拒收 产妇疑延误治疗亡</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/9/n11644702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bkn-20191109111642298-1109_00952_001_01b-150x120.jpg" align ="left"></a>近日，一自称患者家属的网民在网上爆料说，黑龙江大庆油田总医院以没有床位为由拒绝接收产妇，产妇大出血后还一再怠慢渎职、延误治疗，导致产妇死亡。院方至今未有公布产妇死因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月10日 6:28 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/27/n11683629.md#1" target="_blank">云南一高速路在建隧道口坍塌 4死8被困</a><br></h3>11月26日晚上，云南临沧市凤庆县云凤高速公路第二合同段安石隧道出口坍塌。截至27日上午9时，救出14人，其中4人死亡10人受伤，还有8人仍被困。
-
-据悉，坍塌事故发生在当晚6时许。官方公布的事故原因是，云凤高速公路第二合同段安石隧道两度出现大量泥砂涌入情况，导致出口坍塌。
-
-截至27日上午9时，在前期自救的情况下，9人获救；后又救出5人。但是这14.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/9/n11644390.md#1" target="_blank">上海一物流园突发大火 黑烟滚滚 三人受伤</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/9/n11644390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/9e46f87618870d220b863790c6d9cd46-150x120.jpg" align ="left"></a>11月9日17时左右，上海市宝山区一物流园区发生火灾，3名被困人员被救出，已送医救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月09日 10:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679108.md#1" target="_blank">广西靖西5.2级地震 余震15次 至少1人死亡</a><br></h3>11月25日上午，广西靖西市发生5.2级地震，随后又发生3.9级余震，导致1人死亡4人受伤。中午，广西崇左市大新县发生3.2级地震。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/21/n11671034.md#1" target="_blank">传北京东城区广渠门中学一学生被刺身亡</a><br></h3>11月21日上午，北京东城区天坛东路上原人才市场附近，广渠门中学一名学生被刺身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/20/n11667599.md#1" target="_blank">山东煤矿发生安全事故 11人被困</a><br></h3>11月20日5时50分，山东能源肥城矿业集团位于嘉祥县境内的梁宝寺煤矿发生安全事故，造成11人被困，目前救援工作正在进行中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:00 AM							</td></tr>
