--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -21,7 +21,6 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11698134.md#1" target="_blank">曾目睹高以翔骤逝 黄景瑜沉寂多日后憔悴现身</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11698134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>曾目睹台湾艺人高以翔骤逝过程的大陆男星黄景瑜，12月2日在品牌活动上憔悴现身。沉寂多天后复工的他，脸色凝重，声音沙哑，整个人暴瘦了一圈，让不少粉丝心疼他对好友的离世不知有多自责。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11698517.md#1" target="_blank">“豫章书院事件”持续 成都与北京再曝虐童案</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11698517.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2-4-150x120.jpg" align ="left"></a>江西南昌虐打体罚学生事件在两年前曝光之后，该事件还未得到彻底解决，志愿者与爆料人纷纷受到威胁之际，近日，北京明声听力康复中心与四川成都嘉年华青少年心理辅导中心也被爆虐童。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 7:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11697489.md#1" target="_blank">中共拒美舰停港 专家：或助台美军事交流</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11697489.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/413f33f09a1dbc76a995c905336bf096-150x120.jpg" align ="left"></a>中共外交部表示，将拒绝美国舰船和军机停靠香港的申请。有美国的军事专家分析，中共这么做，将会使得台湾与美国间的军事关系提升，美国将寻找更加可靠的补给港口，而台湾会是一个备受支持的选项。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:05 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11707704.md#1" target="_blank">业绩差 南宁一公司多名员工穿内裤寒风中罚站</a><br></h3>近日广西南宁最低气温约10℃，有市民看到，在当街有几名男子只穿着内裤，站在寒风中瑟瑟发抖，还有人拿着棍子在旁边训话。据悉是某传媒公司的员工因业绩差而遭罚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 7:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11707197.md#1" target="_blank">河南许昌一高中女生从学校五楼跳下</a><br></h3>12月6日上午，河南许昌建安区三高发生一名女学生跳楼事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 6:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11706777.md#1" target="_blank">每日三退声明精选（2019/12/06）</a><br></h3>我是一位居住于四川的农民，曾经经历过土改，大跃进，等疯狂的红色运动，曾经被打为地富反坏右，被多人围殴，游街示众，后来虽然进行了平反，但多年内心一直过不了这个坎，总觉得又气又怕。今年是个多事之年，大事件的接连发生表明共产党体制的摇摇欲坠，希望在我有生之年能看见邪党倒台，感谢大纪元给了我一个吐露自己心声的机会，我在这里自愿宣布退出中国共产党的一切组织机构，三退保.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11706646.md#1" target="_blank">河南20岁女大学生失踪5日 男同事承认杀人</a><br></h3>河南洛阳20岁的女大学生狄含笑失踪多日后，目前，其兼职的男同事李某已承认将她杀害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:11 PM							</td></tr>
@@ -33,5 +32,6 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11699885.md#1" target="_blank">地陷埋3人后 广州又一处路面发生塌陷</a><br></h3>继12月1日，广州市大道北与禺东西路交界处发生地面塌陷后，12月3日，番禺南村镇番禺大道南往北方向一处人行道上也发生地面塌陷。不过，无人员伤亡。而此前的塌陷导致3人被埋，当局直接往坑中填水泥，受害人家属连日打横幅抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11699099.md#1" target="_blank">每日三退声明精选（2019/12/03）</a><br></h3>我的父亲在毛贼东及中共的欺骗下曾为中共军队作战一度几乎成为了中共的炮灰。中共野蛮地所做所为为全世界人民所震惊。中国人民只有彻底推翻共产党才能看到希望。中共在多年的统治中残害了大量无辜的百姓，吞噬了大量无辜的生命。我很高兴未曾加入过邪恶的中国共产党。在此强烈声明立刻退出中国少先队、中国共青团和中共匪的任何一切组织。我要做一个清清白白的人。希望正义的美国和善良的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11697447.md#1" target="_blank">广西乡医称喝长生液活120岁 网民嘲讽</a><br></h3>近日大陆网传一张照片，一群穿着白大褂的医生围着一锅液体，横幅上写着“高手在民间 神方在乡里 广西宾阳乡医熬制长生液现场会 人类活到120岁不是神话”。此事引发网民热议，有网民讽刺：“特供，必须特供！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/3/n11697266.md#1" target="_blank">福建少女遭霸凌 被同学脱衣服搧耳光</a><br></h3>11月24日，福建中华技师学院，15岁女生小小（化名）被同学和其他几名女生在寝室扒光上衣、疯狂扇耳光、揪头发、辱骂，并被拍下视频。警方称，因涉事女生都是未成年人，无法拘留，校方则仍未做出回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_4.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/ncid282_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_4.htm">http://www.epochtimes.com/gb/ncid282_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
