--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,24 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730692.md#1" target="_blank">台首场总统政见发表 蓝绿激烈交锋</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/978ca020c59573ce2f9a8cdd47040e86-150x120.jpg" align ="left"></a>2020台湾总统选举首场政见发表会18日在华视登场，国民党、民进党、亲民党三组候选人首度同台讲述政见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 3:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730896.md#1" target="_blank">陆机构估经济减速 党官称人均GDP增 学者解析</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730896.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/04/1406101713442003-150x120.jpg" align ="left"></a>最近半个多月以来，中国人民大学相关机构两次发布相同的中国明年GDP增速目标数据，都低于6%，有分析指可能是提前“吹风”，另有中共官员称中国人均GDP有望赶超美国，最近有海外学者深入分析了GDP增速背后的中国经济真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 3:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731023.md#1" target="_blank">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9586-150x120.jpg" align ="left"></a>继11月底广东茂名化州市文楼镇上万村民抗议建火葬场之后，12月16、17日，在距离文楼镇27公里的播扬镇再次爆发抗议，警民冲突激烈，村民扔汽油弹攻政府，一位在场村民刘先生向大纪元记者描述了现场情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731125.md#1" target="_blank">河北蠡县三任派出所所长壮年暴死</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1410140122312483-150x120.jpg" align ="left"></a>自1999到2011年，河北省蠡县鲍墟乡有三任派出所所长，外加一个副乡长壮年暴死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730763.md#1" target="_blank">【新闻看点】习访澳门 管控空前 全城半瘫痪</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730763.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189420298-150x120.jpg" align ="left"></a>习近平访问澳门，澳门当局所采取的“安保措施”，可苦了澳门市民。轻轨停运、航道禁航、加油站不供油、提款机不许提款等等，几乎造成了澳门全城“瘫痪”。澳门人相对平静的生活，因为习的到来被完全打乱了，有网民怒斥“极度扰民”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730895.md#1" target="_blank">80门店全关门 大陆又一家生鲜电商停业</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730895.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/VCG111100293019-600x400-150x120.jpg" align ="left"></a>近日，上海的生鲜电商“妙生活”悄然关掉了所有门店。对此，“妙生活”的创始人表示，高额的成本让企业很难盈利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:12 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730832.md#1" target="_blank">联想控股董事长柳传志卸任 “黑马”宁旻接班</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730832.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/170329073323100615-150x120.jpg" align ="left"></a>12月18日晚间，联想控股正式发布了柳传志退休的消息，被外界熟知的“联想少帅”杨元庆却无缘接班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 1:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730768.md#1" target="_blank">复旦大学改章程删自由 学生集体唱校歌抗议</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fudan-150x120.jpg" align ="left"></a>复旦大学大幅度阉割章程在社会上引发争议，也在复旦师生中引发不满可以抗议。有学生自发合唱校歌之行为，对校方拟修改大学章程的计划表示抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730369.md#1" target="_blank">累陷冤狱8年 法轮功学员王怀富遭迫害离世</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-11-150x120.jpg" align ="left"></a>四川绵阳市法轮功学员王怀富被中共非法关押8次，被迫害累计8年半，最后被嘉州监狱注射大量不明药物，奄奄一息回家。2019年7月16日，王怀富含冤离世，终年71岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 11:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730384.md#1" target="_blank">【直播回放】台湾总统选举 首场电视政见会</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730384.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-18-at-10.30.57-pm-150x120.png" align ="left"></a>中华民国2020总统大选首场电视政见发表会今（18日）晚7时在华视登场，三组候选人包括总统蔡英文、国民党候选人韩国瑜、亲民党候选人宋楚瑜，首度同台讲述政见。新唐人电视台和大纪元将进行网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 9:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729384.md#1" target="_blank">【翻墙必看】茂名易地建火葬场引发流血冲突</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729384.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191218A01_v4_cut-600x400-1-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.村民疑政府易地建火葬场 茂名再爆警民冲突
+广东茂名建火葬场事件再爆发激烈冲突。上周，播扬镇民众怀疑政府故伎重施，以建净化水设施为由在当地修建火葬场，引发村民强烈抵制，并发生激烈警民冲突和流血事件。
+
+2.赵薇零滤镜大特写曝光 网民直呼看傻眼
+凭在《还珠格格》中饰演“小燕子”走红的大陆女星赵薇，日前在大陆.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 9:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730220.md#1" target="_blank">美智库：美军应部署无人侦察机监视中共</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1000w_q95-4-150x120.jpg" align ="left"></a>美国华府智库哈德逊研究所（Hudson Institute）在一份新的报告中指出，为了监控中共军方在台湾海峡和南海的举动，美军应该部署现代化的无人侦察机，方为上策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729034.md#1" target="_blank">港TVB裁员一成 台商和董事局主席疑退出</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/19-12-19.52-150x120.jpg" align ="left"></a>被称为香港央视的无线电视（TVB），不但将裁员一成，而且高层人事接连调整。现在又传出董事局主席陈国强和台湾富商王雪红将双双退出TVB。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729907.md#1" target="_blank">美报告：中共操控港台媒体 破坏新闻自由</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729907.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X7577-150x120.jpg" align ="left"></a>美国非营利组织“保护记者委员会”（The Committee to Protect Journalists）在12月16日发表报告说，香港和台湾的新闻自由正遭受来自中共的巨大压力与影响。中共试图藉由操控港台媒体，以干涉编辑内容并操纵社会舆论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729821.md#1" target="_blank">湖南新晃校园埋尸案 主犯杜少平被判死刑</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/3-1-150x120.png" align ="left"></a>12月17日、18日，湖南新晃县一中操场埋尸案公开庭审。18日消息，嫌疑人杜少平，犯故意杀人等罪，被判处死刑，罚款50万元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729423.md#1" target="_blank">吉林访民出狱后续遭警方骚扰 生活在恐惧中</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-20-150x120.jpg" align ="left"></a>最近，吉林维权民众小雷（化名）向大纪元记者透露，刚出狱三个月的她一直受到地方“稳控”，目前流浪在外还不时会接到老家警察打来的骚扰电话。小雷表示，“这样的电话让人心生反感和恐惧！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729311.md#1" target="_blank">莱特希泽：美中协议以书面呈现 完全可执行</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729311.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LA7LC-150x120.jpg" align ="left"></a>周二（12月17日），美国贸易代表罗伯特·莱特希泽（Robert Lighthizer）表示，第一阶段的美中贸易协议是完全可以执行的，且协议将以书面方式说明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:26 PM							</td></tr>
@@ -9,22 +29,8 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729036.md#1" target="_blank">穆迪：中国企业债务是全球经济最大威胁</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729036.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-152321502-600x400-150x120.jpg" align ="left"></a>著名评级机构穆迪公司的经济学家警告说，中国企业债是对全球经济的“最大威胁”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 10:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728683.md#1" target="_blank">【直播回放】台湾立委与政党票号次抽签</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728683.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-12-150x120.jpg" align ="left"></a>12月18日，台湾将举办总统大选首场电视政见会。当天还有台北市立委抽签等与选举有关的活动。新唐人电视台和《大纪元时报》进行全程追踪和网络直播，请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 9:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729168.md#1" target="_blank">A股550公司业绩预告 料过半企业亏损或下滑</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729168.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1305311027192519-150x120.jpg" align ="left"></a>2019年还剩下10个交易日，一些A股上市公司相继披露了今年业绩的预计报告、减持计划等，从报告可见，今年年末至明年A股面临公司业绩下滑、大规模减持等风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 8:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729095.md#1" target="_blank">确定当渣哥九龙湾店长一天 王宗尧获网民力挺</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729095.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911232121302188-150x120.jpg" align ="left"></a>艺人王宗尧确定于12月18日到良心小吃店“渣哥一九九六”九龙湾分店做一日店长，许多网民得知消息后，纷纷在他的facebook（fb）留言表示，届时要到“德福店”一睹偶像的风采，并一起感受九龙湾的人情味。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 8:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725052.md#1" target="_blank">美国会议员：中共将垮台 支持中国人退党</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11725052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-ron--150x120.jpg" align ="left"></a>美国国会议员莱特（Ron Wright）12月10日接受大纪元采访表示，香港为自由的抗争感动了全世界；自由和共产主义不能共存，中共终将垮台；支持中国人采取行动退党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729071.md#1" target="_blank">删“自由”增党控 复旦章程大变脸引炮轰</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/FuDanUni-150x120.jpg" align ="left"></a>复旦大学大幅度修改章程的消息在社媒中刷屏，尤其是新章程中删除了“思想自由”，往后挪动了“学术独立”，大幅增加了“党”的内容，引发强烈争议。有网友斥：“留着这几句话装装门面也行啊，难道如今真的连门面都不用装，干脆裸奔了？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729038.md#1" target="_blank">中共央行外汇占款连降16个月 降幅扩大</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729038.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/190806101400100311-150x120.jpg" align ="left"></a>中共央行12月16日下午公布数据显示，11月份中共央行外汇占款连续第16个月下降，降幅较10月份扩大。11月份中国外汇占款和外汇储备双双下降。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728740.md#1" target="_blank">抖音过滤内容 在美国受质疑 转往加拿大</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728740.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1073256498-150x120.jpg" align ="left"></a>网络视频平台抖音（TikTok）正在扩建其加拿大团队，尽管该平台已涉嫌按中共政府的需要过滤内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729060.md#1" target="_blank">中共补贴企业数据曝光 中石化和广汽获最多</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729060.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/09/909071515262198-150x120.jpg" align ="left"></a>中国企业2019年收到的国家补贴继续扩大，今年前9个月发放补贴款增长了15%，其中中石化和汽车制造商获得的补贴最多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:55 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728635.md#1" target="_blank">沉寂一年正式复出 范冰冰连续两天受邀走红毯</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-957395718-150x120.jpg" align ="left"></a>去年因被举报偷税漏税遭官方重罚的大陆女星范冰冰，在沉寂一年后东山再起。据陆媒16日披露，范冰冰刚刚赴美为好莱坞影片《355》配音归国，又连着两天受邀走红毯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728888.md#1" target="_blank">赵薇零滤镜大特写曝光 网民直呼看傻眼</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728888.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/zhaowei-huangyoulong-150x120.jpg" align ="left"></a>凭在《还珠格格》中饰演“小燕子”走红的大陆女星赵薇，日前在大陆综艺节目《演员请就位》中亮相时，被拍到零滤镜下尽显疲态的大特写，让网民直呼看傻眼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729007.md#1" target="_blank">债券多用于抵押融资 楼继伟放风或发特别国债</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11729007.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1312310333481528-600x400-150x120.jpg" align ="left"></a>中共前财政部部长楼继伟日前表示，针对政府债券流动性不足，可以考虑大规模发行特别国债。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:19 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728882.md#1" target="_blank">【萧茗看世界】美中协议：美国大赢但有后患</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1148843006-150x120.jpg" align ="left"></a>大家好，我是萧茗。今天是2019年12月16日。今天我们来分析中美第一阶段贸易协议的意义。虽然和其他人比起来有点迟，但是我们从一个更宏观长远的角度来分析，希望带来一些新意。另外，昨天美国贸易代表和财政部长针对第一阶段的贸易协议，联合出了一个非同寻常的声明，可以说是美国历史上从未见过的，我们也来分析一下这件事。对于还不了解第一阶段贸易协议的观众，我们先简单介绍.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191218A01_v4_cut-150x120.jpg" align ="left"></a>广东茂名建火葬场事件再爆发激烈冲突。上周，播扬镇民众怀疑政府故伎重施，以建净化水设施为由在当地修建火葬场，引发村民强烈抵制，并发生激烈警民冲突和流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728754.md#1" target="_blank">陆41上市民企变国企 10多家老板被抓或辞职</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728754.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/05/1105202316282431-150x120.jpg" align ="left"></a>今年中国民营企业的生存状况继续恶化，中共“国资系”则以“纾困”为名将私营企业国有化，更大规模地强推“公私合营”，中国民企在这种环境下违约增加、融资困难，生存艰难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728824.md#1" target="_blank">【新闻看点】专家：2020中国经济或硬着陆</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/AFP-construction-site-labors-150x120.jpg" align ="left"></a>日前，中共统计局公布了一组好于预期的经济数据，在大陆媒体和亲共媒体间引起一片欢腾，认为中国经济已经出现了“回暖”。然而专家分析，中国经济尚未走出低谷，明年或走向硬着陆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728815.md#1" target="_blank">澳门迎习如临大敌 轻轨停运 运油车禁驶</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728815.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1052915588-150x120.jpg" align ="left"></a>国家主席习近平星期三将到访澳门，澳门当局如临大敌，部分澳门线路轻轨停运，油车禁驶导致车主“加油”也受限制。而澳门街头及巴士上，到处都有“天眼”监控。港珠澳大桥的安检之严密更是史上首见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726557.md#1" target="_blank">美国会通过国防授权法案 7大看点一次看懂</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726557.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1003182344381160-600x400-1-150x120.jpg" align ="left"></a>周一（12月16日），美国国会参议院通过了7380亿美元的2020财年“国防授权法案”（NDAA）。该法案除了提到组建太空军、提升美军薪酬之外，还涉及诸多中国相关议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728507.md#1" target="_blank">【新闻看点】习访澳宣布新政？惠誉降澳评级</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728507.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/08/308300450938-150x120.jpg" align ="left"></a>习到访澳门，路透社独家报导，可能会宣布一系列“惠澳”措施。不过就在习行将动身前夕，国际评级机构惠誉昨天（12月16日）发表了评级报告，把澳门的评级展望由“稳定”下调至“负面”，让北京出了洋相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11730296.md#1" target="_blank">瑞典环保少女晒德国坐车照 引发争议</a><br></h3>瑞典环保少女格雷塔日前搭火车回家时公布了一张她坐在火车地上的照片，结果却引发德国网民对虚伪与诚实的热烈讨论，连德国顶级政治人物都发表了意见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729434.md#1" target="_blank">四川内江5.2级地震 18人受伤8千户停电</a><br></h3>12月18日早上，四川内江市资中县发生5.2级地震。截至下午2时许，官方称，地震造成18人受伤，其中5人重伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 4:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729559.md#1" target="_blank">中共航母山东舰交付仪式 多名高官缺席</a><br></h3>日前，中共第一艘航空母舰山东舰交付海军。这次交付仪式打破了以往的几个惯例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729550.md#1" target="_blank">贵州煤矿事故致16死 四川渗水事故致5死</a><br></h3>12月18日，贵州安龙县广隆煤矿瓦斯爆炸搜救工作结束。此次事故，导致16名矿工死亡。而稍早前的四川煤矿渗水事故搜救工作也基本结束，5人死亡，13人获救。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 1:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729514.md#1" target="_blank">每日三退声明精选（2019/12/17）</a><br></h3>我是律师，常常为捍卫公民权力利益与中共邪党暴政法官党徒发生冲突，时间长了，也认识到中共法律对公民残暴打击的邪恶性质。我崇尚民主、道德、公正、独立的法律制度，声明退出中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:23 PM							</td></tr>
